[package]
name = "fs_wasm"
version = "0.6.40"
authors = ["ugnic <ryuto.nishida@meetasu.jp>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/ugnic/fs_wasm"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.14"
js-sys = "0.3.41"
flate2 = "1.0.13"